@@ -1,5 +1,12 @@
 2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
+    * src/lib/geodata/handlers/osm-namefinder/NamedTagHandler.cpp:
+
+    Work around GeoParser bug which prevents the handler of the first
+    element to be invoked.
+
+2008-08-04  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
     * src/lib/geodata/handlers/osm-namefinder/SearchResultsTagHandler.cpp:
 
     - Remove commented out code.
